--- a/app/views/todo.html
+++ b/app/views/todo.html
@@ -1,3 +1,4 @@
+<h1>{{ title }}</h1>
 
 <input type="text" ng-model="task.name" ng-keyup="add($event)">
 <button class="btn btn-sm btn-success" ng-click="add($event)" ng-disabled="!task.name">Ajouter</button>
